--- a/Pages/contactos.html
+++ b/Pages/contactos.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fluence Soft💡</title>
-  <link rel="stylesheet" href="../Assets/css/Menu.css">
-  <link rel="stylesheet" href="../Assets/css/Contactos.css">
-  <link rel="stylesheet" href="../Assets/css/Footer.css">
+  <link rel="stylesheet" href="../../assets/css/Menu.css">
+  <link rel="stylesheet" href="../../assets/css/Contactos.css">
+  <link rel="stylesheet" href="../../assets/css/Footer.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -85,10 +85,9 @@
     </div>
   </div>
   <div id="footer-container"></div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="../Assets/js/Menu.js"></script>
-  <script src="../Assets/js/Contactos.js"></script>
-  <script src="../Assets/js/Footer.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../../assets/js/Menu.js"></script>
+  <script src="../../assets/js/Contactos.js"></script>
+  <script src="../../assets/js/Footer.js"></script>
 </body>
 </html>
-
