--- a/Pages/nosotros.html
+++ b/Pages/nosotros.html
@@ -4,11 +4,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Fluence Soft💡</title>
-	<link rel="stylesheet" href="../Assets/css/Menu.css">
-	<link rel="stylesheet" href="../Assets/css/Nosotros.css">
-	<link rel="stylesheet" href="../Assets/css/Footer.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+	<title>Nosotros - Fluence Soft💡</title>
+	<link rel="stylesheet" href="../../Assets/css/Menu.css">
+	<link rel="stylesheet" href="../../Assets/css/Nosotros.css">
+	<link rel="stylesheet" href="../../Assets/css/Footer.css">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
@@ -27,7 +27,7 @@
 		</div>
 		<div class="row" id="Parrafo1">
 			<div class="col-auto">
-				<img class="LogoCompl" src="../Assets/img/Logo/LogoCompl.png" alt="LogoCompleto">
+				<img class="LogoCompl" src="../../Assets/img/Logo/LogoCompl.png" alt="LogoCompleto">
 			</div>
 			<div class="col-sm-10" id="texto">
 				<p>
@@ -217,7 +217,7 @@
 			<div class="col-lg-8 d-flex team-section flex-wrap">
 				<div class="team-member">
 					<div class="image-container">
-						<img class="profile-img" src="../Assets/img/Perfil/SebastianCanedo.png"
+						<img class="profile-img" src="../../Assets/img/Perfil/SebastianCanedo.png"
 							alt="Sebastian Canedo">
 					</div>
 					<p class="nameP">Sebastian Canedo</p>
@@ -234,7 +234,7 @@
 				</div>
 				<div class="team-member">
 					<div class="image-container">
-						<img class="profile-img" src="../Assets/img/Perfil/AngelPeñaranda.png"
+						<img class="profile-img" src="../../Assets/img/Perfil/AngelPeñaranda.png"
 							alt="Angel Peñaranda">
 					</div>
 					<p class="nameP">Angel Peñaranda</p>
@@ -277,7 +277,7 @@
 		<div class="members">
 			<div id="cont-items">
 				<div class="content">
-					<img class="grupo" src="../Assets/img/Perfil/FabricioCrespo.jpg" alt="Fabricio Crespo">
+					<img class="grupo" src="../../Assets/img/Perfil/FabricioCrespo.jpg" alt="Fabricio Crespo">
 					<p class="name">Ing.Fabricio Crespo</p>
 					<a href="https://www.linkedin.com/in/fabriciocrespo" target="_blank" class="linkedin-btn">
 						<i class="fab fa-linkedin"></i>
@@ -286,7 +286,7 @@
 			</div>
 			<div id="cont-items">
 				<div class="content">
-					<img class="grupo" src="../Assets/img/Perfil/ClarissGutierrez.jpg" alt="Clariss Gutierrez">
+					<img class="grupo" src="../../Assets/img/Perfil/ClarissGutierrez.jpg" alt="Clariss Gutierrez">
 					<p class="name">Ing.Clariss Gutierrez</p>
 					<a href="https://www.linkedin.com/in/clariss-bricely-09b5b4348/" target="_blank" class="linkedin-btn">
 						<i class="fab fa-linkedin"></i>
@@ -295,7 +295,7 @@
 			</div>
 			<div id="cont-items">
 				<div class="content">
-					<img class="grupo" src="../Assets/img/Perfil/MauricioCoca.jpg" alt="Mauricio Coca">
+					<img class="grupo" src="../../Assets/img/Perfil/MauricioCoca.jpg" alt="Mauricio Coca">
 					<p class="name">Ing.Mauricio Coca</p>
 					<a href="https://www.linkedin.com/in/fabriciocrespo" target="_blank" class="linkedin-btn">
 						<i class="fab fa-linkedin"></i>
@@ -304,7 +304,7 @@
 			</div>
 			<div id="cont-items">
 				<div class="content">
-					<img class="grupo" src="../Assets/img/Perfil/PabloGuzman.png" alt="Pablo Guzman">
+					<img class="grupo" src="../../Assets/img/Perfil/PabloGuzman.png" alt="Pablo Guzman">
 					<p class="name">Ing.Pablo Guzman</p>
 					<a href="https://www.linkedin.com/in/pablo-guzman-58b56a2bb?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="linkedin-btn">
 						<i class="fab fa-linkedin"></i>
@@ -313,7 +313,7 @@
 			</div>
 			<div id="cont-items">
 				<div class="content">
-					<img class="grupo" src="../Assets/img/Perfil/JairoGuzman.jpg" alt="Jairo Guzman">
+					<img class="grupo" src="../../Assets/img/Perfil/JairoGuzman.jpg" alt="Jairo Guzman">
 					<p class="name">Ing.Jairo Guzman</p>
 					<a href="https://www.linkedin.com/in/jairo-matias-guzmán-ramos-534627279/" target="_blank" class="linkedin-btn">
 						<i class="fab fa-linkedin"></i>
@@ -322,7 +322,7 @@
 			</div>
 			<div id="cont-items">
 				<div class="content">
-					<img class="grupo" src="../Assets/img/Perfil/RafaelGamboa.jpg" alt="Rafael Gamboa">
+					<img class="grupo" src="../../Assets/img/Perfil/RafaelGamboa.jpg" alt="Rafael Gamboa">
 					<p class="name">Ing.Rafael Gamboa</p>
 					<a href="https://www.linkedin.com/in/fabriciocrespo" target="_blank" class="linkedin-btn">
 						<i class="fab fa-linkedin"></i>
@@ -331,7 +331,7 @@
 			</div>
 			<div id="cont-items">
 				<div class="content">
-					<img class="grupo" src="../Assets/img/Perfil/AnettGarcia.jpg" alt="Anett Garcia">
+					<img class="grupo" src="../../Assets/img/Perfil/AnettGarcia.jpg" alt="Anett Garcia">
 					<p class="name">Ing.Anett Garcia</p>
 					<a href="https://www.linkedin.com/in/anett-garcia-773a67342?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="linkedin-btn">
 						<i class="fab fa-linkedin"></i>
@@ -342,9 +342,9 @@
 	</div>
 
 	<div id="footer-container"></div>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-	<script src="../Assets/js/Menu.js"></script>
-	<script src="../Assets/js/Footer.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="../../Assets/js/Menu.js"></script>
+	<script src="../../Assets/js/Footer.js"></script>
 </body>
 
 </html>
