--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Fluence Soft💡</title>
-	<link rel="stylesheet" href="../Assets/css/Menu.css">
-	<link rel="stylesheet" href="../Assets/css/Inicio.css">
-	<link rel="stylesheet" href="../Assets/css/Footer.css">
+	<link rel="stylesheet" href="../assets/css/menu.css">
+	<link rel="stylesheet" href="../assets/css/inicio.css">
+	<link rel="stylesheet" href="../assets/css/footer.css">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -31,7 +31,7 @@
 				<p class="LetraColor text-center">"Desarrollamos proyectos de software diseñados no solo para cumplir, sino para
 					superar
 					expectativas, estableciendo nuevos estándares de calidad e innovación."</p>
-				<a href="Nosotros.html" class="btnNosotros btn">Descubre más sobre nosotros</a>
+				<a href="nosotros.html" class="btnNosotros btn">Descubre más sobre nosotros</a>
 			</div>
 			<!-- Planet Viewer -->
 			<div class="col-12 col-md-8" id="Menutexto2">
@@ -48,8 +48,8 @@
 	</div>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-	<script src="../Assets/js/Menu.js"></script>
-	<script src="../Assets/js/Footer.js"></script>
+	<script src="../assets/js/menu.js"></script>
+	<script src="../assets/js/footer.js"></script>
 </body>
 
 </html>
