--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<p class="LetraColor text-center">"Desarrollamos proyectos de software diseñados no solo para cumplir, sino para
 					superar
 					expectativas, estableciendo nuevos estándares de calidad e innovación."</p>
-				<a href="/Pages/nosotros.html" class="btnNosotros btn">Descubre más sobre nosotros</a>
+				<a href="nosotros.html" class="btnNosotros btn">Descubre más sobre nosotros</a>
 			</div>
 			<!-- Planet Viewer -->
 			<div class="col-12 col-md-8" id="Menutexto2">
