--- a/servicio.html
+++ b/servicio.html
@@ -5,9 +5,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Fluence Soft💡</title>
-	<link rel="stylesheet" href="../assets/css/menu.css">
-	<link rel="stylesheet" href="../assets/css/servicio.css">
-	<link rel="stylesheet" href="../assets/css/footer.css">
+	<link rel="stylesheet" href="Assets/css/menu.css">
+	<link rel="stylesheet" href="Assets/css/Servicios.css">
+	<link rel="stylesheet" href="Assets/css/footer.css">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -23,7 +23,7 @@
 			<div id="menu-container"></div>
 		</div>
         <div class="row" id="logoCom">
-            <img id="logo" src="../Assets/img/Logo/LogoCompl.png" alt="LogoCompleto">
+            <img id="logo" src="Assets/img/Logo/LogoCompl.png" alt="LogoCompleto">
           </div>
           <div class="row">
             <h1 id="texto">Transformamos ideas en soluciones digitales</h1>
@@ -32,7 +32,7 @@
             <div class="col-lg-3" id="servicio">
               <div class="servicioContenido">
                 <div class="servicioIcon">
-                  <img src="../Assets/img/Icono/Foco.png" alt="Software">
+                  <img src="Assets/img/Icono/Foco.png" alt="Software">
                 </div>
                 <h3 id="texto">Software Personalizado</h3>
                 <p id="texto">
@@ -44,7 +44,7 @@
             <div class="col-lg-3" id="servicio">
               <div class="servicioContenido">
                 <div class="servicioIcon">
-                  <img src="../Assets/img/Icono/Foco.png" alt="Software">
+                  <img src="Assets/img/Icono/Foco.png" alt="Software">
                 </div>
                 <h3 id="texto">Sistemas CRM (Customer Relationship Management)</h3>
                 <p id="texto">
@@ -56,7 +56,7 @@
             <div class="col-lg-3" id="servicio">
               <div class="servicioContenido">
                 <div class="servicioIcon">
-                  <img src="../Assets/img/Icono/Foco.png" alt="Software">
+                  <img src="Assets/img/Icono/Foco.png" alt="Software">
                 </div>
                 <h3 id="texto">Automatización de Procesos Internos</h3>
                 <p id="texto">
@@ -70,7 +70,7 @@
             <div class="col-lg-3" id="servicio">
               <div class="servicioContenido">
                 <div class="servicioIcon">
-                  <img src="../Assets/img/Icono/Foco.png" alt="Software">
+                  <img src="Assets/img/Icono/Foco.png" alt="Software">
                 </div>
                 <h3 id="texto">Plataformas de eCommerce</h3>
                 <p id="texto">
@@ -82,7 +82,7 @@
             <div class="col-lg-3" id="servicio">
               <div class="servicioContenido">
                 <div class="servicioIcon">
-                  <img src="../Assets/img/Icono/Foco.png" alt="Software">
+                  <img src="Assets/img/Icono/Foco.png" alt="Software">
                 </div>
                 <h3 id="texto">Dashboards y Analítica Empresarial</h3>
                 <p id="texto">
@@ -94,7 +94,7 @@
             <div class="col-lg-3" id="servicio">
               <div class="servicioContenido">
                 <div class="servicioIcon">
-                  <img src="../Assets/img/Icono/Foco.png" alt="Software">
+                  <img src="Assets/img/Icono/Foco.png" alt="Software">
                 </div>
                 <h3 id="texto">Integraciones de Sistemas y APIs</h3>
                 <p id="texto">
@@ -108,7 +108,7 @@
             <div class="col-lg-3" id="servicio">
               <div class="servicioContenido">
                 <div class="servicioIcon">
-                  <img src="../Assets/img/Icono/Foco.png" alt="Software">
+                  <img src="Assets/img/Icono/Foco.png" alt="Software">
                 </div>
                 <h3 id="texto">Sistemas de Gestión Empresarial (ERP)</h3>
                 <p id="texto">
@@ -120,7 +120,7 @@
             <div class="col-lg-3" id="servicio">
               <div class="servicioContenido">
                 <div class="servicioIcon">
-                  <img src="../Assets/img/Icono/Foco.png" alt="Software">
+                  <img src="Assets/img/Icono/Foco.png" alt="Software">
                 </div>
                 <h3 id="texto">Elaboración y Venta de Microcontroladores</h3>
                 <p id="texto">
@@ -132,7 +132,7 @@
             <div class="col-lg-3" id="servicio">
               <div class="servicioContenido">
                 <div class="servicioIcon">
-                  <img src="../Assets/img/Icono/Foco.png" alt="Software">
+                  <img src="Assets/img/Icono/Foco.png" alt="Software">
                 </div>
                 <h3 id="texto">Soporte Técnico</h3>
                 <p id="texto">
@@ -149,8 +149,8 @@
 	</div>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-	<script src="../assets/js/menu.js"></script>
-	<script src="../assets/js/footer.js"></script>
+	<script src="Assets/js/menu.js"></script>
+	<script src="Assets/js/footer.js"></script>
 </body>
 
 </html>
