--- a/servicio.html
+++ b/servicio.html
@@ -5,9 +5,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Fluence Soft💡</title>
-	<link rel="stylesheet" href="Assets/css/menu.css">
+	<link rel="stylesheet" href="Assets/css/Menu.css">
 	<link rel="stylesheet" href="Assets/css/Servicios.css">
-	<link rel="stylesheet" href="Assets/css/footer.css">
+	<link rel="stylesheet" href="Assets/css/Footer.css">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -149,8 +149,8 @@
 	</div>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-	<script src="Assets/js/menu.js"></script>
-	<script src="Assets/js/footer.js"></script>
+	<script src="Assets/js/Menu.js"></script>
+	<script src="Assets/js/Footer.js"></script>
 </body>
 
 </html>
